# JobSearch

./: .gitignore  Alaska_Cybersecurity_jobs_2025-11-24.csv  Arizona_Cybersecurity_jobs_2025-11-24.csv  CLI_testing.py  JobSearch.py  LICENSE  README.md  gitignore.txt  pyproject.toml
Job_Listings/: Alabama_Cybersecurity_jobs_2025-11-24.csv  Arkansas_Cybersecurity_jobs_2025-11-24.csv  California_Cybersecurity_jobs_2025-11-24.csv
jobsearch/: JobSearch.py  __init__.py  cli.py  database.py  exclude_words.py  testing.py
jobsearch/Job_Listings/: Alabama_Cybersecurity_jobs_2025-11-24.csv  Alaska_Cybersecurity_jobs_2025-11-24.csv  Arizona_Cybersecurity_jobs_2025-11-24.csv  Arkansas_Cybersecurity_jobs_2025-11-24.csv  California_Cybersecurity_jobs_2025-11-24.csv
jobsearch_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
